disabled csrf filter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,7 @@ play.http {
 }
 
 play.filters {
-  disabled += filters.CSRFFilter
+  disabled += play.filters.csrf.CSRFFilter
 
   hosts {
     allowed = ["localhost:4200", "localhost:9000"]
